# EquivFusion

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/actions/integration-tests/: action.yml
.github/actions/run-integration-tests/: action.yml
.github/actions/setup-build-env/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/setup-test-env/: action.yml
.github/workflow/: CI.md
.github/workflows/: README.md  pre-check.yml
client/: CMakeLists.txt  main.cpp
docs/dot/: equivfusion.dot
frontends/: frontends
include/: CMakeLists.txt
include/Tools/EquivMiterTool/: equiv_miter_tool.h
include/backend/: backend_base.h  write_aiger.h  write_btor2.h  write_smt.h
include/circt-passes/: CMakeLists.txt  InitAllPasses.h
include/circt-passes/CombTransforms/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/ConvertCaseToLogicalComparsion/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/DecomposeConcat/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/EquivMiter/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/FlattenIOArray/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/FuncToHWModule/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/HWTransforms/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/MemrefHLS/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/Miter/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/RemoveRedundantFunc/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/ReplicateToConcat/: CMakeLists.txt  Passes.h  Passes.td
include/circt-passes/TemporalUnroll/: CMakeLists.txt  Passes.h  Passes.td
infrastructure/: CMakeLists.txt
infrastructure/base/: CMakeLists.txt  backend_command.cpp  base.md  command.cpp  command.h  commandManager.cpp  commandManager.h  equiv_miter_command.cpp  equivfusionManager.cpp  equivfusionManager.h  generic_command.cpp  help_command.cpp  history_command.cpp  read_c_command.cpp  read_command.cpp  read_firrtl_command.cpp  read_v_command.cpp  set_port_command.cpp  show_command.cpp  solver_command.cpp  unroll_command.cpp  write_command.cpp  write_mlir_command.cpp
infrastructure/circt-passes/: CMakeLists.txt
infrastructure/circt-passes/CombTransforms/: CMakeLists.txt  decompose_concat.cpp  replicate_to_concat.cpp
infrastructure/circt-passes/ConvertCaseToLogicalComparsion/: CMakeLists.txt  convert_case_to_logical_comparsion.cpp
infrastructure/circt-passes/DecomposeConcat/: CMakeLists.txt  decompose_concat.cpp
infrastructure/circt-passes/EquivMiter/: CMakeLists.txt  miter.cpp
infrastructure/circt-passes/FlattenIOArray/: CMakeLists.txt  flatten_io_array.cpp
infrastructure/circt-passes/FuncToHWModule/: CMakeLists.txt  func_to_hw_module.cpp
infrastructure/circt-passes/HWTransforms/: CMakeLists.txt  flatten_array_slice.cpp  flatten_io_array.cpp  flatten_struct_explode.cpp  hw_aggregate_ops_convert.cpp  hw_aggregate_to_comb.cpp  init_after_defined_operands.cpp  init_post_defined_operands.cpp
infrastructure/circt-passes/MemrefHLS/: CMakeLists.txt  convert_index_to_i32.cpp  flatten_memref.cpp  get_global_to_alloc.cpp  set_func_arg_direction.cpp
infrastructure/circt-passes/Miter/: CMakeLists.txt  miter.cpp
infrastructure/circt-passes/RemoveRedundantFunc/: CMakeLists.txt  equivfusion_remove_redundant_func.cpp
infrastructure/kernel/: CMakeLists.txt  run_command.cpp  run_command.h
infrastructure/log/: CMakeLists.txt  log.cpp  log.h
infrastructure/managers/: CMakeLists.txt
infrastructure/managers/equivfusion_manager/: CMakeLists.txt  equivfusionManager.cpp  equivfusionManager.h
infrastructure/tools/: CMakeLists.txt
infrastructure/tools/EquivMiterTool/: CMakeLists.txt  equiv_miter_tool.cpp  equiv_miter_tool.h
infrastructure/utils/: CMakeLists.txt  common_functions.cpp  common_functions.h  namespace_macro.h  utils.md
infrastructure/utils/hls-util/: populate_hls_passes.cpp  populate_hls_passes.h
infrastructure/utils/log/: log.cpp
infrastructure/utils/log-util/: log_util.cpp  log_util.h
infrastructure/utils/path/: path.cpp  path.h
infrastructure/utils/path-util/: path_util.cpp  path_util.h
infrastructure/utils/string/: string.cpp  string.h
infrastructure/utils/string-util/: string_util.cpp  string_util.h
libs/: CMakeLists.txt
libs/Backend/: CMakeLists.txt  backend_base.cpp  backend_base.h  write_aiger.cpp  write_aiger.h  write_btor2.cpp  write_btor2.h  write_smt.cpp  write_smt.h
libs/Frontend/: CMakeLists.txt  frontend_base.cpp  frontend_base.h  read_mlir.cpp  read_mlir.h
libs/Read/: CMakeLists.txt  read_base.cpp  read_base.h  read_mlir.cpp  read_mlir.h
libs/Tools/: CMakeLists.txt
libs/Tools/EquivMiter/: CMakeLists.txt  equiv_miter.cpp  equiv_miter.h
libs/Tools/EquivMiterTool/: CMakeLists.txt  equiv_miter_tool.cpp  equiv_miter_tool.h
libs/Write/: CMakeLists.txt
libs/Write/aiger/: aiger.cpp  aiger.h
libs/Write/base/: base.cpp  base.h
libs/Write/btor2/: btor2.cpp  btor2.h
libs/Write/mlir/: mlir.cpp  mlir.h
libs/Write/smt/: smt.cpp  smt.h
libs/backend/: CMakeLists.txt  backend_base.cpp  write_aiger.cpp  write_btor2.cpp  write_smt.cpp
modelling/: modelling.md
scripts/: build_circt.sh  update_docs.sh
scripts/solvers/: README.md  config_aiger.sh  config_bitwuzla.sh  config_boolector.sh  config_kissat.sh  config_solvers.sh  config_z3.sh  install_solvers.sh
solving/: CMakeLists.txt  main.cpp  run_solver.cpp  run_solver.h  solver.cpp  solver.h  solver.hpp  solver_definitions.h  solving.md
solving/solver-runner/: CMakeLists.txt  README.md  solver_declare.cpp  solver_declare.h  solver_runner.cpp  solver_runner.h
test/: test.md
test/integration_tests/: it.md
test/unit_tests/: unit_tests.md
tools/: CMakeLists.txt
tools/circt-lec/: CMakeLists.txt  circt-lec.cpp
tools/equiv_miter/: CMakeLists.txt  README.md  equiv_miter.cpp
tools/equivfusion-hls/: CMakeLists.txt  equivfusion-hls.cpp
tools/equivfusion-opt/: CMakeLists.txt  equivfusion-opt.cpp
tools/run_solver/: CMakeLists.txt  README.md  main.cpp
(+157 files in other folders)
