cmake_minimum_required(VERSION 3.20)

project(equiv_fusion)

set(CMAKE_CXX_STANDARD 20)

set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
set(OUTPUT_LIB_DIR ${CMAKE_BINARY_DIR}/lib/)
set(OUTPUT_BIN_DIR ${CMAKE_BINARY_DIR}/bin/)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_LIB_DIR})

add_subdirectory(infrastructure)
add_subdirectory(client)






