add_subdirectory(Miter)
add_subdirectory(DecomposeConcat)
add_subdirectory(FuncToHWModule)
add_subdirectory(RemoveRedundantFunc)
add_subdirectory(ConvertCaseToLogicalComparsion)
add_subdirectory(TemporalUnroll)
add_subdirectory(MemrefHLS)
add_subdirectory(FlattenIOArray)
add_subdirectory(ReplicateToConcat)